--- a/.github/workflows/ghcr-publish.yml
+++ b/.github/workflows/ghcr-publish.yml
@@ -10,13 +10,20 @@ jobs:
     permissions:
       packages: write
     steps:
-    - uses: actions/checkout@v4
-    - name: Build and publish Container Image to GitHub Container Registry
-      uses: TCPShield/gp-docker-action@65486288374aeae8705fc543405dc4d23de6060b
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
       with:
-        # Github username to push Docker image from
-        github-username: ${{ github.repository_owner }}
-        # GitHub token to push Docker image to GitHub Container Registry
-        github-token: ${{ github.token }}
-        # Dockerfile name
-        dockerfile: Dockerfile
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ghcr.io/${{ github.repository }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
